Chanded SEO descriptions and update hello@giddys.ca on onegiddy.html and ofidtales.html. Updated Telegram for Giddy's pages.

--- a/index.html
+++ b/index.html
@@ -33,28 +33,28 @@
 		</script>
 
 	<!-- Meta Description (for SEO) -->
-	<title>OFiDCrypt | Products & Wallets with Digital Gifts</title>
+	<title>OFiDCrypt | Family Products with Digital Gifts</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta name="description"
-		content="Let's explore the world of Web3 together! Try new apps and digital wallets, learn through articles and hold your first token with real value; complimentary through partner apps!">
+		content="Unlock cash‑backed digital value with OFiDCrypt & Giddy’s. Explore wallets, collectibles, family goods, and simple tools that make digital assets fun and rewarding.">
 	<meta name="keywords"
 		content="cryptocurrency, crypto, web3, solana, bouncy ball, expb, OFiD, blockchain, digital assets, OFiDCrypt, OFiD Crew, OFiD Kid, crypto community">
 	<meta name="author" content="Tokin">
 
 	<!-- Open Graph Meta Tags -->
-	<meta property="og:title" content="OFiDCrypt | Products & Wallets with Digital Gifts">
+	<meta property="og:title" content="Family Products with Digital Gifts">
 	<meta property="og:description"
-		content="Let's explore the world of Web3 together! Try new apps and digital wallets, learn through articles and hold your first token with real value; complimentary through partner apps!">
+		content="Unlock cash‑backed digital value with OFiDCrypt & Giddy’s. Explore wallets, collectibles, family goods, and simple tools that make digital assets fun and rewarding.">
 	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofidcrypt-marketing.webp">
 	<meta property="og:url" content="https://www.ofidcrypt.com">
 	<meta property="og:type" content="website">
 
 	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="OFiDCrypt | Products & Wallets with Digital Gifts">
+	<meta name="twitter:title" content="Family Products with Digital Gifts">
 	<meta name="twitter:description"
-		content="Let's explore the world of Web3 together! Try new apps and digital wallets, learn through articles and hold your first token with real value; complimentary through partner apps!">
+		content="Unlock cash‑backed digital value with OFiDCrypt & Giddy’s. Explore wallets, collectibles, family goods, and simple tools that make digital assets fun and rewarding.">
 	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofidcrypt-marketing.webp">
 	<meta name="twitter:url" content="https://www.ofidcrypt.com">
 
