--- a/ofidtales.html
+++ b/ofidtales.html
@@ -33,7 +33,7 @@
 		</script>
 
 	<!-- Meta Description (for SEO) -->
-	<title>OFiDCrypt | Giddy's Universe: Stories & Shop</title>
+	<title>OFiDCrypt | Giddy's Universe Series and Shop</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta name="description"
@@ -43,7 +43,7 @@
 	<meta name="author" content="Tokin">
 
 	<!-- Open Graph Meta Tags -->
-	<meta property="og:title" content="OFiDCrypt | Giddy's Universe: Stories & Shop">
+	<meta property="og:title" content="OFiDCrypt | Giddy's Universe Series and Shop">
 	<meta property="og:description"
 		content="Meet Giddy, Baby Tokin, The Crew, and dive into their world! Discover unique stories, goods for kids, and get ready to join them on their Web3 adventures!">
 	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-giddys.webp">
@@ -52,9 +52,9 @@
 
 	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="OFiDCrypt | Giddy's Universe: Stories & Shop">
+	<meta name="twitter:title" content="OFiDCrypt | Giddy's Universe Series and Shop">
 	<meta name="twitter:description"
-		content="MMeet Giddy, Baby Tokin, The Crew, and dive into their world! Discover unique stories, goods for kids, and get ready to join them on their Web3 adventures!">
+		content="Meet Giddy, Baby Tokin, The Crew, and dive into their world! Discover unique stories, goods for kids, and get ready to join them on their Web3 adventures!">
 	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-giddys.webp">
 	<meta name="twitter:url" content="https://www.ofidcrypt.com/ofidtales">
 
@@ -1009,11 +1009,11 @@
 				</section>
 				<section>
 					<h3>Email</h3>
-					<p><a href="mailto:me@ofidcrypt.com">me@ofidcrypt.com</a></p>
+					<p><a href="mailto:hello@giddys.ca">hello@giddys.ca</a></p>
 				</section>
 				<section>
 					<h3>Telegram</h3>
-					<p><a href="https://t.me/OFiDBall">OFiDCrypt e𝕏P Web3™</a></p>
+					<p><a href="https://t.me/oneGIDDY">Giddy's by OFiDCrypt</a></p>
 				</section>
 				<!-- Hvr -->
 				<section>
