--- a/onegiddy.html
+++ b/onegiddy.html
@@ -1000,11 +1000,11 @@
 				</section>
 				<section>
 					<h3>Email</h3>
-					<p><a href="mailto:me@ofidcrypt.com">me@ofidcrypt.com</a></p>
+					<p><a href="mailto:hello@giddys.ca">hello@giddys.ca</a></p>
 				</section>
 				<section>
 					<h3>Telegram</h3>
-					<p><a href="https://t.me/OFiDBall">OFiDCrypt e𝕏P Web3™</a></p>
+					<p><a href="https://t.me/oneGIDDY">Giddy's by OFiDCrypt</a></p>
 				</section>
 				<!-- Hvr -->
 				<section>
@@ -1035,8 +1035,8 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li><a href="/bouncyball.html">Token</a></li>
 				<li><a href="/docs/main.html">Docs</a></li>
+				<li><a href="/community.html">News & PR</a></li>
 				<li><a href="/pages/affiliate.html">Partners</a></li>
 				<li><a href="/pages/about.html">About</a></li>
 			</ul>
