--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -478,6 +478,8 @@
 								<div class="button-container">
 									<a href="https://blockspot.io/coin/bouncy-ball-of-ofid-fun/" class="button">View
 										e𝕏PB</a>
+									<a href="https://blockspot.io/coin/giddy-2/" class="button">View
+										GIDDY</a>
 								</div>
 								<p>
 									Blockspot.io is a comprehensive cryptocurrency listing platform that provides
