--- a/promote/client-directory.html
+++ b/promote/client-directory.html
@@ -35,7 +35,7 @@
 		</script>
 
 	<!-- Meta Description (for SEO) -->
-	<title>OFiDCrypt | Client Driectory</title>
+	<title>OFiDCrypt | Client Directory</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="description" content="Have the choice to opt in and promote your brand or service with us on our directory page!">
@@ -43,7 +43,7 @@
 	<meta name="author" content="Tokin ⬢">
 
 	<!-- Open Graph Meta Tags -->
-	<meta property="og:title" content="OFiDCrypt | Client Driectory">
+	<meta property="og:title" content="OFiDCrypt | Client Directory">
 	<meta property="og:description"
 		content="Have the choice to opt in and promote your brand or service with us on our directory page!">
 	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofidcrypt-marketing.webp">
@@ -52,7 +52,7 @@
 
 	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="OFiDCrypt | Client Driectory">
+	<meta name="twitter:title" content="OFiDCrypt | Client Directory">
 	<meta name="twitter:description"
 		content="Have the choice to opt in and promote your brand or service with us on our directory page!">
 	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofidcrypt-marketing.webp">
@@ -94,7 +94,7 @@
 		<!-- Header Subpage-->
 		<header class="header-subpage">
 			<a href="../index">
-				<img src="../assets/images/logo01.png" alt="OFiDCrypt Logo" class="logo">
+				<img src="../assets/images/ofid-logo-saturn01.png" alt="OFiDCrypt Logo" class="logo">
 			</a>
 		</header>
 
@@ -107,11 +107,10 @@
 		<nav id="nav">
 			<ul class="links">
 				<li><a href="../index.html">Home</a></li>
-				<li class="active"><a href="../explore.html">Services</a></li>
-				<li><a href="../community.html">News</a></li>
-				<li><a href="../pages/livestream.html">Events</a></li>
-				<li><a href="../ofidtales.html">Giddy's</a></li>
-				<li><a href="../pages/about.html">About Us</a></li>
+				<li><a href="../ofidtales.html">Giddy's Shop</a></li>
+				<li><a href="../explore.html">Wallets & Apps</a></li>
+				<li><a href="../bouncyball.html">Tokens</a></li>
+				<li><a href="../cashlinks.html">Digital Gifts</a></li>
 			</ul>
 			<ul class="icons">
 				<li>
@@ -158,7 +157,7 @@
 					<span class="date">OFiDCrypt e𝕏P Web3™</span>
 					<h1>Client<br />
 						Directory</h1>
-					<p>Explore the brands and services of customers we've worked with—an optional collaborative service provided by OFiDCrypt.</p>
+					<p>Explore the brands and services of customers we've worked with — an optional collaborative service provided by OFiDCrypt.</p>
 				</header>
 			
 				<!-- Community Links Table -->
@@ -313,8 +312,8 @@
 		<!-- Copyright -->
 		<div id="copyright">
 			<ul>
-				<li><a href="../bouncyball.html">Token</a></li>
 				<li><a href="../docs/main.html">Docs</a></li>
+				<li><a href="../community.html">News & PR</a></li>
 				<li><a href="../pages/affiliate.html">Partners</a></li>
 				<li><a href="../pages/about.html">About</a></li>
 			</ul>
