Multiple text changes for flow and smooth scrolling with data-scroll. Changed anchor buttons to onclick.

--- a/bouncyball.html
+++ b/bouncyball.html
@@ -145,8 +145,7 @@
 						<img src="/assets/images/ledger-nano-s-plus.png" alt="Ad Banner 1"
 							style="max-width: 100%; height: auto;">
 					</a>
-					<a href="https://kraken.pxf.io/xLox1A"
-						class="ad-slide" style="border-bottom: none;">
+					<a href="https://kraken.pxf.io/xLox1A" class="ad-slide" style="border-bottom: none;">
 						<img src="/assets/images/kraken-banner-01.PNG" alt="Ad Banner 2"
 							style="max-width: 100%; height: auto;">
 					</a>
@@ -1062,8 +1061,8 @@
 				<header>
 					<p style="text-align: center;">
 						Giddy’s Bouncy Ball (e𝕏PB) is verified on Solscan and listed on
-						<a href="#coingecko-ticker">CoinGecko</a> —
-						Explore your favorite wallet apps and data providers above to buy your own Bouncy Ball Tokens!
+						<a href="#coingecko-ticker">CoinGecko</a> — Explore your favorite wallet apps and data providers
+						above to buy your own Bouncy Ball Tokens!
 					</p>
 				</header>
 			</section>
