--- a/explore.html
+++ b/explore.html
@@ -152,8 +152,7 @@
 						<img src="/assets/images/ledger-nano-s-plus.png" alt="Ad Banner 1"
 							style="max-width: 100%; height: auto;">
 					</a>
-					<a href="https://kraken.pxf.io/xLox1A"
-						class="ad-slide" style="border-bottom: none;">
+					<a href="https://kraken.pxf.io/xLox1A" class="ad-slide" style="border-bottom: none;">
 						<img src="/assets/images/kraken-banner-01.PNG" alt="Ad Banner 2"
 							style="max-width: 100%; height: auto;">
 					</a>
@@ -168,7 +167,7 @@
 					<a href="https://t.co/gQBLmw20Qp" class="ad-slide" style="border-bottom: none;">
 						<img src="/assets/images/dobby-banner-01.png" alt="Ad Banner 5"
 							style="max-width: 100%; height: auto;">
-										</a>
+					</a>
 				</div>
 			</div>
 
@@ -310,19 +309,28 @@
 
 					<!-- Apps & Learn Buttons -->
 					<div class="round-button-container">
+
 						<div class="button-pair">
-							<button class="round-button"><a href="#hvr-promo">Token Promo</a></button>
-							<button class="round-button"><a href="/pages/affiliate.html">Web3 Services</a></button>
+							<button class="round-button" data-scroll="#hvr-promo">
+								Promotions
+							</button>
+
+							<button class="round-button" onclick="location.href='/pages/affiliate.html'">
+								Web3 Services
+							</button>
 						</div>
+
 						<div class="button-pair">
-							<button class="round-button"><a href="#article-featured">Learn Web3</a></button>
+							<button class="round-button" data-scroll="#article-featured">
+								Learn Web3
+							</button>
 						</div>
 					</div>
 				</header>
 
 				<!-- Quick Start Section -->
 				<section class="quick-start-section">
-					
+
 					<!-- Quick Start: Apps List -->
 					<header id="apps-list">
 						<h2>Top Players in Web3</h2>
@@ -333,34 +341,45 @@
 					<div class="quick-start-items">
 
 						<!-- Quick Start - App 1 -->
-						<article class="quick-start-item"> <span class="image left"><img
-									src="/assets/images/social-logo/kinnected-03.PNG" alt="Kinnected Logo"></span>
+						<article class="quick-start-item">
+							<span class="image left">
+								<img src="/assets/images/social-logo/kinnected-03.PNG" alt="Kinnected Logo">
+							</span>
 							<div class="quick-start-content">
 								<h3 class="quick-start-title">Kinnected! Wallet</h3>
-								<p class="align-center">By GFDevSoft</p> <button class="round-button"><a
-										href="/pages/kinnected.html">More
-										Details</a></button>
+								<p class="align-center">By GFDevSoft</p>
+								<button class="round-button" onclick="location.href='/pages/kinnected.html'">
+									More Details
+								</button>
 							</div>
 						</article>
 
 						<!-- Quick Start - App 2 -->
-						<article class="quick-start-item"> <span class="image left"><img
-									src="/assets/images/300x300-phantom.png" alt="Phantom Logo"></span>
+						<article class="quick-start-item">
+							<span class="image left">
+								<img src="/assets/images/300x300-phantom.png" alt="Phantom Logo">
+							</span>
 							<div class="quick-start-content">
 								<h3 class="quick-start-title">Get your Wallet</h3>
 								<p class="align-center">By Phantom Technologies Inc</p>
-								<button class="round-button"><a
-										href="/explore/app-featured-phantom.html">Get Phantom</a></button>
+								<button class="round-button"
+									onclick="location.href='/explore/app-featured-phantom.html'">
+									Get Phantom
+								</button>
 							</div>
 						</article>
 
 						<!-- Quick Start - App 3 -->
-						<article class="quick-start-item"> <span class="image left"><img
-									src="/assets/images/social-logo/IMG_1876.png" alt="Telegram Logo"></span>
+						<article class="quick-start-item">
+							<span class="image left">
+								<img src="/assets/images/social-logo/IMG_1876.png" alt="Telegram Logo">
+							</span>
 							<div class="quick-start-content">
 								<h3 class="quick-start-title">Telegram</h3>
-								<p class="align-center">By Telegram FZ LLC</p> <button class="round-button"><a
-										href="https://t.me/OFiDBall">Join Now</a></button>
+								<p class="align-center">By Telegram FZ LLC</p>
+								<button class="round-button" onclick="location.href='https://t.me/OFiDBall'">
+									Join Now
+								</button>
 							</div>
 						</article>
 					</div>
@@ -374,13 +393,16 @@
 					</header>
 
 					<!-- Promo: Featured -->
-					<article class="quick-start-item quick-start-featured"> <span class="image left"><img
-								src="/assets/images/social-logo/hvr-logo-space-300.png" alt="Hvr Logo"></span>
+					<article class="quick-start-item quick-start-featured">
+						<span class="image left">
+							<img src="/assets/images/social-logo/hvr-logo-space-300.png" alt="Hvr Logo">
+						</span>
 						<div class="quick-start-content">
 							<h3 class="quick-start-title">Hvr Browser</h3>
-							<p class="align-center">Rewards Promotion LIVE</p> <button class="round-button"><a
-									href="/explore/app-featured-hvr.html">Try
-									Hvr</a></button>
+							<p class="align-center">Rewards Promotion</p>
+							<button class="round-button" onclick="location.href='/explore/app-featured-hvr.html'">
+								Try Hvr
+							</button>
 						</div>
 					</article>
 				</section>
