--- a/onegiddy.html
+++ b/onegiddy.html
@@ -828,7 +828,7 @@
 					console.log('Theme configured (black and purple):', isThemeConfigured());
 				</script>
 
-				<header id="giddy-guide">
+				<header id="guide">
 					<h2>What is ONE GIDDY StableToken?</h2>
 
 					<!-- Description -->
