Fixed video oath with capitalized extension on ofidtales.html.

--- a/ofidtales.html
+++ b/ofidtales.html
@@ -454,7 +454,7 @@
 						<!-- Video container with poster overlay -->
 						<div class="video-main video-hosted-portrait">
 							<video id="myVideo" controls playsinline preload="metadata">
-								<source src="../assets/videos/ofid-tales-king-laine-teaser.mp4" type="video/mp4">
+								<source src="../assets/videos/ofid-tales-king-laine-teaser.MP4" type="video/mp4">
 								Your browser does not support the video tag.
 							</video>
 							<!-- Poster overlay (visible before play and after video ends) -->
