Fixed a small typo on game/playhtml and fixed a link to community from the blinko banner.

--- a/game/play.html
+++ b/game/play.html
@@ -48,7 +48,7 @@
 	<meta name="author" content="Tokin ⬢">
 
 	<!-- Open Graph Meta Tags -->
-	<meta property="og:title" content="Digital Gifting with Kinnected Wallet | OFiDCrypt">
+	<meta property="og:title" content=">Giddy's Blinko Game | OFiDCrypt">
 	<meta property="og:description"
 		content="A retro collect-to-win game by the creators of Giddy's Universe. Play Blinko, collect Bouncy Balls, and unlock exclusive gifts!">
 	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofid-giddys.webp">
@@ -57,7 +57,7 @@
 
 	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="Digital Gifting with Kinnected Wallet | OFiDCrypt">
+	<meta name="twitter:title" content=">Giddy's Blinko Game | OFiDCrypt">
 	<meta name="twitter:description"
 		content="A retro collect-to-win game by the creators of Giddy's Universe. Play Blinko, collect Bouncy Balls, and unlock exclusive gifts!">
 	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofid-giddys.webp">
@@ -305,7 +305,7 @@
 					<span class="date">DiscoCar Games</span>
 					<h1>Blinko</h1>
 					<p>As part of our quest to align web3 worlds with real spending, we are excited to introduce
-						Giddy's Blinko — a retro collect-to-win game where players can drop Bouncy Ballsto win bragging
+						Giddy's Blinko — a retro collect-to-win game where players can drop and catch Bouncy Balls for bragging
 						rights!
 					</p>
 				</header>
@@ -316,7 +316,7 @@
 						<!-- Ad Banner -->
 						<section id="kin-money" class="ad-table">
 							<div class="ad-content">
-								<a href="https://ofidcrypt.ca/rebuilding-together-the-rebirth-of-kin-in-one-kin-community"
+								<a href="https://x.com/GiddysBlinko"
 									style="border-bottom: none;">
 									<img src="/assets/images/giddys-blinko-banner.PNG" alt="Ad Banner">
 								</a>
@@ -357,7 +357,8 @@
 
 			<!-- Video Section -->
 			<div>
-				
+
+				<!-- Header Video -->
 				<header>
 					<h2 id="blinko-trailer" class="align-center">Trailer: Giddy's Retro Arcade</h2>
 					
