Fixed buttons to onclick from link in button on several pages -- cashlinks.html ofidtales.html game/play.html

--- a/game/play.html
+++ b/game/play.html
@@ -305,7 +305,8 @@
 					<span class="date">DiscoCar Games</span>
 					<h1>Blinko</h1>
 					<p>As part of our quest to align web3 worlds with real spending, we are excited to introduce
-						Giddy's Blinko — a retro collect-to-win game where players can drop and catch Bouncy Balls for bragging
+						Giddy's Blinko — a retro collect-to-win game where players can drop and catch Bouncy Balls for
+						bragging
 						rights!
 					</p>
 				</header>
@@ -316,8 +317,7 @@
 						<!-- Ad Banner -->
 						<section id="kin-money" class="ad-table">
 							<div class="ad-content">
-								<a href="https://x.com/GiddysBlinko"
-									style="border-bottom: none;">
+								<a href="https://x.com/GiddysBlinko" style="border-bottom: none;">
 									<img src="/assets/images/giddys-blinko-banner.PNG" alt="Ad Banner">
 								</a>
 							</div>
@@ -361,7 +361,7 @@
 				<!-- Header Video -->
 				<header>
 					<h2 id="blinko-trailer" class="align-center">Trailer: Giddy's Retro Arcade</h2>
-					
+
 					<!-- Section Description -->
 					<p class="align-center">Take a look at our early trailer showcasing our Giddy's Blinko Retro gaming
 						experience!</p>
@@ -418,12 +418,17 @@
 			<!-- Quick Start: Featured -->
 			<section class="quick-start-section">
 				<article class="quick-start-item quick-start-featured">
-					<span class="image left"><img src="/assets/images/giddyts-shop-products.png"
-							alt="Giddy's Shop Products"></span>
+					<span class="image left">
+						<img src="/assets/images/giddyts-shop-products.png" alt="Giddy's Shop Products">
+					</span>
+
 					<div class="quick-start-content">
 						<h3 class="quick-start-title">Giddy's Shop</h3>
 						<p class="align-center">Coming Soon — Our debut product selection</p>
-						<button class="button"><a href="/ofidtales.html#giddys-nav">Visit Now</a></button>
+
+						<button class="round-button" onclick="window.location.href='/ofidtales.html#giddys-nav'">
+							Visit Now
+						</button>
 					</div>
 				</article>
 			</section>
