--- a/pages/kinnected.html
+++ b/pages/kinnected.html
@@ -379,17 +379,24 @@
 				</header>
 
 				<!-- Quick Start: Featured -->
-				<section class="quick-start-section">
-					<article class="quick-start-item quick-start-featured">
-						<span class="image left"><img src="/assets/images/dgcl-placeholder.PNG"
-								alt="Digital Gift Placeholder"></span>
-						<div class="quick-start-content">
-							<h3 class="quick-start-title">Digital Gifts</h3>
-							<p class="align-center">Claim Cash!</p>
-							<button class="button"><a href="/cashlinks.html">Check Now</a></button>
-						</div>
-					</article>
-				</section>
+<section class="quick-start-section">
+	<article class="quick-start-item quick-start-featured">
+		<span class="image left">
+			<img src="/assets/images/dgcl-placeholder.PNG" alt="Digital Gift Placeholder">
+		</span>
+
+		<div class="quick-start-content">
+			<h3 class="quick-start-title">Digital Gifts</h3>
+			<p class="align-center">Claim Cash!</p>
+
+			<button 
+				class="round-button"
+				onclick="window.location.href='/cashlinks.html'">
+				Check Now
+			</button>
+		</div>
+	</article>
+</section>
 
 				<!-- 
 							<div class="image button-image">
