--- a/cashlinks.html
+++ b/cashlinks.html
@@ -153,8 +153,7 @@
 						<img src="/assets/images/ledger-nano-s-plus.png" alt="Ad Banner 1"
 							style="max-width: 100%; height: auto;">
 					</a>
-					<a href="https://kraken.pxf.io/xLox1A"
-						class="ad-slide" style="border-bottom: none;">
+					<a href="https://kraken.pxf.io/xLox1A" class="ad-slide" style="border-bottom: none;">
 						<img src="/assets/images/kraken-banner-01.PNG" alt="Ad Banner 2"
 							style="max-width: 100%; height: auto;">
 					</a>
@@ -169,7 +168,7 @@
 					<a href="https://t.co/gQBLmw20Qp" class="ad-slide" style="border-bottom: none;">
 						<img src="/assets/images/dobby-banner-01.png" alt="Ad Banner 5"
 							style="max-width: 100%; height: auto;">
-										</a>
+					</a>
 				</div>
 			</div>
 
@@ -311,7 +310,6 @@
 							<h2>Digital Gifts</h2>
 						</header>
 
-						<!-- Cash Links Block 1 -->
 						<div class="cashlinks-items">
 							<article class="cashlinks-item" id="expb">
 								<a href="/bouncyball.html#buy-expb" class="image left">
@@ -319,10 +317,10 @@
 								</a>
 								<div class="cashlinks-content">
 									<h3>eXPB — Buy</h3>
-									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
-										<a href="javascript:void(0);"
-											data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html?id=1766792617348"
-											onclick="event.preventDefault();">Claim Cash</a>
+									<button class="button round-button"
+										data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html?id=1766792617348"
+										onclick="return verifyRecaptchaForLinks(this);">
+										Claim Cash
 									</button>
 								</div>
 							</article>
@@ -333,10 +331,10 @@
 								</a>
 								<div class="cashlinks-content">
 									<h3>GIDDY — Swap</h3>
-									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
-										<a href="javascript:void(0);"
-											data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html"
-											onclick="event.preventDefault();">Claim Cash</a>
+									<button class="button round-button"
+										data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html"
+										onclick="return verifyRecaptchaForLinks(this);">
+										Claim Cash
 									</button>
 								</div>
 							</article>
@@ -348,16 +346,15 @@
 								</a>
 								<div class="cashlinks-content dobby-gift">
 									<h3>DOBBY</h3>
-									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
-										<a href="javascript:void(0);"
-											data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html?id=1766791372692"
-											onclick="event.preventDefault();">Claim Cash</a>
+									<button class="button round-button"
+										data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html?id=1766791372692"
+										onclick="return verifyRecaptchaForLinks(this);">
+										Claim Cash
 									</button>
 								</div>
 							</article>
 						</div>
 
-						<!-- Cash Links Block 2 -->
 						<div class="cashlinks-items">
 							<article class="cashlinks-item" id="one">
 								<a href="https://x.com/OneKinCommunity?s=20" class="image left" target="_blank"
@@ -366,10 +363,10 @@
 								</a>
 								<div class="cashlinks-content">
 									<h3>ONE</h3>
-									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
-										<a href="javascript:void(0);"
-											data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html"
-											onclick="event.preventDefault();">Claim Cash</a>
+									<button class="button round-button"
+										data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html"
+										onclick="return verifyRecaptchaForLinks(this);">
+										Claim Cash
 									</button>
 								</div>
 							</article>
@@ -381,10 +378,10 @@
 								</a>
 								<div class="cashlinks-content">
 									<h3>KIN</h3>
-									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
-										<a href="javascript:void(0);"
-											data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html?id=1766527744504"
-											onclick="event.preventDefault();">Claim Cash</a>
+									<button class="button round-button"
+										data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html?id=1766527744504"
+										onclick="return verifyRecaptchaForLinks(this);">
+										Claim Cash
 									</button>
 								</div>
 							</article>
@@ -396,16 +393,15 @@
 								</a>
 								<div class="cashlinks-content">
 									<h3>DUNO</h3>
-									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
-										<a href="javascript:void(0);"
-											data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html?id=1766790854415"
-											onclick="event.preventDefault();">Claim Cash</a>
+									<button class="button round-button"
+										data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html?id=1766790854415"
+										onclick="return verifyRecaptchaForLinks(this);">
+										Claim Cash
 									</button>
 								</div>
 							</article>
 						</div>
 
-						<!-- Cash Links Block 3 -->
 						<div class="cashlinks-items">
 							<article class="cashlinks-item" id="cpt">
 								<a href="https://x.com/CaptTrench?s=20" class="image left" target="_blank"
@@ -414,10 +410,10 @@
 								</a>
 								<div class="cashlinks-content">
 									<h3>CPT</h3>
-									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
-										<a href="javascript:void(0);"
-											data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html?id=1766792808291"
-											onclick="event.preventDefault();">Claim Cash</a>
+									<button class="button round-button"
+										data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html?id=1766792808291"
+										onclick="return verifyRecaptchaForLinks(this);">
+										Claim Cash
 									</button>
 								</div>
 							</article>
@@ -429,10 +425,10 @@
 								</a>
 								<div class="cashlinks-content">
 									<h3>MYLO</h3>
-									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
-										<a href="javascript:void(0);"
-											data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html?id=1766792905923"
-											onclick="event.preventDefault();">Claim Cash</a>
+									<button class="button round-button"
+										data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html?id=1766792905923"
+										onclick="return verifyRecaptchaForLinks(this);">
+										Claim Cash
 									</button>
 								</div>
 							</article>
@@ -444,10 +440,10 @@
 								</a>
 								<div class="cashlinks-content">
 									<h3>SINU</h3>
-									<button class="button" onclick="return verifyRecaptchaForLinks(this);">
-										<a href="javascript:void(0);"
-											data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html?id=1766792407380"
-											onclick="event.preventDefault();">Claim Cash</a>
+									<button class="button round-button"
+										data-link="https://gfdevsoft.dev/k7m9x2qw8e4r5t6y/pay.html?id=1766792407380"
+										onclick="return verifyRecaptchaForLinks(this);">
+										Claim Cash
 									</button>
 								</div>
 							</article>
@@ -514,132 +510,139 @@
 		</div>
 
 		<style>
-    /* Apply to ALL screen sizes */
-    #token-select,
-    #token-select option {
-        background-color: var(--main-bg-color) !important;
-        color: var(--text-color) !important;
-    }
+			/* Apply to ALL screen sizes */
+			#token-select,
+			#token-select option {
+				background-color: var(--main-bg-color) !important;
+				color: var(--text-color) !important;
+			}
 
-    /* WebKit fix */
-    #token-select option {
-        -webkit-text-fill-color: var(--text-color) !important;
-    }
+			/* WebKit fix */
+			#token-select option {
+				-webkit-text-fill-color: var(--text-color) !important;
+			}
 
-    /* Modal base styles */
-    .modal {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        align-items: center;
-        justify-content: center;
-        z-index: 1000;
-    }
+			/* Modal base styles */
+			.modal {
+				display: none;
+				position: fixed;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				background-color: rgba(0, 0, 0, 0.5);
+				align-items: center;
+				justify-content: center;
+				z-index: 1000;
+			}
 
-    .modal-content {
-        background-color: var(--main-bg-color);
-        padding: 30px 20px 35px;
-        border-radius: 10px;
-        width: 90%;
-        max-width: 550px;
-        text-align: center;
-        animation: slideIn 0.3s ease-out;
-        border: 2px solid var(--quick-start-border-color);
-        position: relative;
-        box-sizing: border-box;
-    }
+			.modal-content {
+				background-color: var(--main-bg-color);
+				padding: 30px 20px 35px;
+				border-radius: 10px;
+				width: 90%;
+				max-width: 550px;
+				text-align: center;
+				animation: slideIn 0.3s ease-out;
+				border: 2px solid var(--quick-start-border-color);
+				position: relative;
+				box-sizing: border-box;
+			}
 
-    @keyframes slideIn {
-        from { transform: translateY(-50px); opacity: 0; }
-        to { transform: translateY(0); opacity: 1; }
-    }
+			@keyframes slideIn {
+				from {
+					transform: translateY(-50px);
+					opacity: 0;
+				}
 
-    .close {
-        position: absolute;
-        top: 10px;
-        right: 15px;
-        font-size: 28px;
-        cursor: pointer;
-        color: var(--text-color);
-        line-height: 1;
-    }
+				to {
+					transform: translateY(0);
+					opacity: 1;
+				}
+			}
 
-    .close:hover {
-        color: var(--link-hover-color);
-    }
+			.close {
+				position: absolute;
+				top: 10px;
+				right: 15px;
+				font-size: 28px;
+				cursor: pointer;
+				color: var(--text-color);
+				line-height: 1;
+			}
 
-    /* Desktop & Tablet: Original 3×3 grid */
-    .token-grid {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 18px;
-        margin-top: 25px;
-        justify-items: center;
-    }
+			.close:hover {
+				color: var(--link-hover-color);
+			}
 
-    /* Mobile: Hide grid, show dropdown */
-    @media (max-width: 600px) {
-        .token-grid {
-            display: none;
-        }
+			/* Desktop & Tablet: Original 3×3 grid */
+			.token-grid {
+				display: grid;
+				grid-template-columns: repeat(3, 1fr);
+				gap: 18px;
+				margin-top: 25px;
+				justify-items: center;
+			}
 
-        .token-dropdown-container {
-            margin-top: 25px;
-            width: 100%;
-        }
+			/* Mobile: Hide grid, show dropdown */
+			@media (max-width: 600px) {
+				.token-grid {
+					display: none;
+				}
 
-        #token-select {
-            width: 100%;
-            padding: 16px 36px 16px 16px;
-            font-size: 1.1em;
-            font-family: inherit;
-            border-radius: 12px;
-            border: 2px solid var(--quick-start-border-color);
-            background-color: var(--main-bg-color);
-            color: var(--text-color);
-            cursor: pointer;
-            appearance: none;
-            -webkit-appearance: none;
-            -moz-appearance: none;
-            transition: background-color 0.3s ease, border-color 0.3s ease;
+				.token-dropdown-container {
+					margin-top: 25px;
+					width: 100%;
+				}
 
-            background-image:
-                linear-gradient(45deg, transparent 60%, var(--text-color) 60%),
-                linear-gradient(-45deg, transparent 60%, var(--text-color) 60%);
-            background-position:
-                calc(100% - 18px) 50%,
-                calc(100% - 13px) 50%;
-            background-size: 8px 8px, 8px 8px;
-            background-repeat: no-repeat;
-        }
+				#token-select {
+					width: 100%;
+					padding: 16px 36px 16px 16px;
+					font-size: 1.1em;
+					font-family: inherit;
+					border-radius: 12px;
+					border: 2px solid var(--quick-start-border-color);
+					background-color: var(--main-bg-color);
+					color: var(--text-color);
+					cursor: pointer;
+					appearance: none;
+					-webkit-appearance: none;
+					-moz-appearance: none;
+					transition: background-color 0.3s ease, border-color 0.3s ease;
 
-        #token-select:hover,
-        #token-select:active {
-            background-color: rgba(160, 0, 255, 0.1);
-            border-color: var(--link-hover-color);
-        }
+					background-image:
+						linear-gradient(45deg, transparent 60%, var(--text-color) 60%),
+						linear-gradient(-45deg, transparent 60%, var(--text-color) 60%);
+					background-position:
+						calc(100% - 18px) 50%,
+						calc(100% - 13px) 50%;
+					background-size: 8px 8px, 8px 8px;
+					background-repeat: no-repeat;
+				}
 
-        #token-select:focus {
-            outline: none;
-            border-color: var(--link-hover-color);
-            box-shadow: 0 0 0 4px rgba(160, 0, 255, 0.2);
-        }
+				#token-select:hover,
+				#token-select:active {
+					background-color: rgba(160, 0, 255, 0.1);
+					border-color: var(--link-hover-color);
+				}
 
-        #token-select option:checked {
-            background-color: var(--link-hover-color) !important;
-            color: #ffffff !important;
-        }
-    }
+				#token-select:focus {
+					outline: none;
+					border-color: var(--link-hover-color);
+					box-shadow: 0 0 0 4px rgba(160, 0, 255, 0.2);
+				}
 
-    /* Help browsers respect dark mode for native controls */
-    #token-directory-modal {
-        color-scheme: light dark;
-    }
-</style>
+				#token-select option:checked {
+					background-color: var(--link-hover-color) !important;
+					color: #ffffff !important;
+				}
+			}
+
+			/* Help browsers respect dark mode for native controls */
+			#token-directory-modal {
+				color-scheme: light dark;
+			}
+		</style>
 
 
 		<script>
