Updated SEO tages for Gidd'ys Blinko game and included the developer DiscoCar Games.

--- a/game/play.html
+++ b/game/play.html
@@ -43,23 +43,23 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="description"
-		content="A retro collect-to-win game by the creators of Giddy's Universe. Play Blinko, collect Bouncy Balls, and unlock exclusive gifts!">
+		content="A retro collect-to-win game from the creators of Giddy's Universe — by DiscoCar Games. Play Blinko, collect Bouncy Balls, and reveal mystery Collectibles!">
 	<meta name="keywords" content="cryptocurrency, kinnected wallet, vip, OFiDCrypt, crypto community">
 	<meta name="author" content="Tokin ⬢">
 
 	<!-- Open Graph Meta Tags -->
-	<meta property="og:title" content=">Giddy's Blinko Game | OFiDCrypt">
+	<meta property="og:title" content="Giddy's Blinko Game | OFiDCrypt">
 	<meta property="og:description"
-		content="A retro collect-to-win game by the creators of Giddy's Universe. Play Blinko, collect Bouncy Balls, and unlock exclusive gifts!">
+		content="A retro collect-to-win game from the creators of Giddy's Universe — by DiscoCar Games. Play Blinko, collect Bouncy Balls, and reveal mystery Collectibles!">
 	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofid-giddys.webp">
 	<meta property="og:url" content="https://www.ofidcrypt.com/game/play">
 	<meta property="og:type" content="website">
 
 	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content=">Giddy's Blinko Game | OFiDCrypt">
+	<meta name="twitter:title" content="Giddy's Blinko Game | OFiDCrypt">
 	<meta name="twitter:description"
-		content="A retro collect-to-win game by the creators of Giddy's Universe. Play Blinko, collect Bouncy Balls, and unlock exclusive gifts!">
+		content="A retro collect-to-win game from the creators of Giddy's Universe — by DiscoCar Games. Play Blinko, collect Bouncy Balls, and reveal mystery Collectibles!">
 	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofid-giddys.webp">
 	<meta name="twitter:url" content="https://www.ofidcrypt.com/game/play">
 
