Added DiscoCar Giddy's Blinko to game folder. Fixed articles link on index.html. Minor token switcher addition to GIDDY and BOUNCY on the respective info pages.

--- a/bouncyball.html
+++ b/bouncyball.html
@@ -1016,6 +1016,9 @@
 					<header class="major" id="buy-expb">
 						<span class="date">Dynamic Growth Token</span>
 						<h1>Get Bouncy</h1>
+
+						<p>♻️ Switch to <a href="/onegiddy.html#swap-giddy">GIDDY</a> StableToken 👀</p>
+
 					</header>
 				</div>
 
