--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
 								<div class="quick-start-content">
 									<h3 class="quick-start-title">Learn About Digital Assets</h3>
 									<p class="align-center">Fundamentals · Basics · Tips · Security</p>
-									<button class="round-button" data-scroll="#article-featured">
+									<button class="round-button" onclick="location.href='/explore.html#article-featured'">
 										Go to Articles
 									</button>
 								</div>
