--- a/onegiddy.html
+++ b/onegiddy.html
@@ -153,8 +153,7 @@
 						<img src="/assets/images/ledger-nano-s-plus.png" alt="Ad Banner 1"
 							style="max-width: 100%; height: auto;">
 					</a>
-					<a href="https://kraken.pxf.io/xLox1A"
-						class="ad-slide" style="border-bottom: none;">
+					<a href="https://kraken.pxf.io/xLox1A" class="ad-slide" style="border-bottom: none;">
 						<img src="/assets/images/kraken-banner-01.PNG" alt="Ad Banner 2"
 							style="max-width: 100%; height: auto;">
 					</a>
@@ -169,7 +168,7 @@
 					<a href="https://t.co/gQBLmw20Qp" class="ad-slide" style="border-bottom: none;">
 						<img src="/assets/images/dobby-banner-01.png" alt="Ad Banner 5"
 							style="max-width: 100%; height: auto;">
-										</a>
+					</a>
 				</div>
 			</div>
 
@@ -318,7 +317,7 @@
 					<p>Explore brand new ways to shop and gift with GIDDY! Tap or click below to copy the <b>Contract
 							Address</b>
 					</p>
-					<p>♻️ Switch to <a href="/bouncyball.html#bouncy">BOUNCY BALL</a> Dynamic Token 👀</p>
+					<p>♻️ Switch to <a href="/bouncyball.html#bouncy">BOUNCY</a> Dynamic Token 👀</p>
 				</header>
 
 				<!-- Info Tile -->
@@ -877,6 +876,9 @@
 						<header class="major" id="swap-giddy">
 							<span class="date">Giddy's Shop Token</span>
 							<h1>Get GIDDY</h1>
+
+							<p>♻️ Switch to <a href="/bouncyball.html#buy-expb">BOUNCY</a> Dynamic Token 👀</p>
+
 						</header>
 					</div>
 
