Replaced Giddy game files wth GZip.

--- a/game/index.html
+++ b/game/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/GiddGameWeb.loader.js";
       var config = {
-        dataUrl: buildUrl + "/GiddGameWeb.data.br",
-        frameworkUrl: buildUrl + "/GiddGameWeb.framework.js.br",
-        codeUrl: buildUrl + "/GiddGameWeb.wasm.br",
+        dataUrl: buildUrl + "/GiddGameWeb.data.unityweb",
+        frameworkUrl: buildUrl + "/GiddGameWeb.framework.js.unityweb",
+        codeUrl: buildUrl + "/GiddGameWeb.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "giddy",
