Added Giddy's Blinko -- Unity by DiscoCar Games

--- a/ofidtales.html
+++ b/ofidtales.html
@@ -438,7 +438,7 @@
 								<h3 class="quick-start-title">Blinko</h3>
 								<p class="align-center">Giddy retro game</p>
 							</div>
-							<button class="round-button" onclick="window.location.href='../game/play.html#blinko-trailer'">
+							<button class="round-button" onclick="window.location.href='../game/play.html'">
 								Play Now
 							</button>
 						</article>
